--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ p {
   justify-content: space-between;
   flex-wrap: wrap;
 }
+
 .section-p2{
   padding: 40px 80px;
 }
@@ -663,4 +664,45 @@ footer .follow{
   #newsletter .form{
     width:100%;
   }
+}
+
+#page-header{
+  background-image: url('image/banner/b1.jpg');
+  width:100%;
+  height:40vh;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding:14px;
+}
+
+#page-header h2,
+#page-header p{
+  color: #fff;
+}
+
+#pagination{
+  text-align: center;
+}
+
+#pagination a{
+  text-decoration: none;
+  background-color: #088178;
+  padding: 15px 20px;
+  border-radius: 4px;
+  color:#fff;
+  font-weight: 600;
+}
+
+#pagination a i{
+  font-size: 16px;
+  font-weight: 600;
+}
+
+#prodetails .single-pro-image{
+  width: 40%;
+  margin-right: 50px;
+
 }
